# oh3

./: .gitignore  .luacov  CMakeLists.txt  CONTRIBUTING.md  README.md  args.lua  async.lua  audio.lua  channel_callbacks.lua  conf.lua  config.lua  controller.lua  extmath.lua  game.lua  game20.lua  game_handler.lua  global_config.lua  input.lua  interpolation.lua  log.lua  main.lua  mouse_button.lua  platform.lua  replay.lua  set_table.lua  stylua.toml  threadify.lua  transform.lua  ui.lua  update_functions.lua
.github/: build_and_test.yml
.github/workflows/: android.yml  apk.yml  app.yml  appimage.yml  build_and_test.yml  exe.yml  wasm.yml
anim/: ease.lua  signal.lua
asset_system/: README.md  index.lua  init.lua  loaders.lua  luv_watcher.lua  mirror.lua  mirror_client.lua  mirror_server.lua  poll_watcher.lua  resource_monitor.lua  utils.lua  watcher.lua
asset_system/file_monitor/: init.lua  luv_watcher.lua  poll_watcher.lua
asset_system/loaders/: compat.lua  init.lua  utils.lua
assets/font/: bootstrap-icons.json  promptfont.json
assets/shader/: bicolor.frag
assets/vector/: create_img_font.py
audio/: immediate.lua  init.lua  queue.lua
compat/: game192.lua  game20.lua  game21.lua  music.lua  sound.lua
compat/game192/: assets.lua  config.lua  events.lua  fake_config.lua  init.lua  level.lua  lua_runtime.lua  player.lua  status.lua  style.lua  timeline.lua  tmpfile.lua  utils.lua  virtual_filesystem.lua  walls.lua
compat/game20/: assets.lua  fake_config.lua  init.lua  level.lua  level_status.lua  lua_runtime.lua  player.lua  speed_data.lua  status.lua  style.lua  timeline.lua  walls.lua
compat/game21/: assets.lua  beat_pulse.lua  camera_shake.lua  color_transform.lua  config.lua  custom_timelines.lua  custom_walls.lua  dynamic_quads.lua  dynamic_tris.lua  flash.lua  hue.lua  init.lua  input.lua  level_status.lua  level_update.lua  lua_runtime.lua  math.lua  particles.lua  player.lua  playsound.lua  pseudo3d.lua  pulse.lua  random.lua  replay.lua  rotation.lua  shader_compat.lua  status.lua  style.lua  swap_particles.lua  timeline.lua  timer.lua  trail_particles.lua  walls.lua
extlibs/: argparse.lua  bit.lua  http.lua  http_client.lua  ltdiff.lua  luasodium.lua  zip.lua
extlibs/json/: json-beautify.lua  json.lua  jsonc.lua
extlibs/love-zip/: CRC32.lua  init.lua
extlibs/luasodium/: _all.lua  core.lua  crypto_aead.lua  crypto_auth.lua  crypto_box.lua  crypto_generichash.lua  crypto_hash.lua  crypto_kx.lua  crypto_onetimeauth.lua  crypto_pwhash.lua  crypto_scalarmult.lua  crypto_secretbox.lua  crypto_secretstream.lua  crypto_shorthash.lua  crypto_sign.lua  crypto_stream.lua  crypto_verify.lua  ffi.lua  pureffi.lua  randombytes.lua  utils.lua  version.lua
extlibs/milua/: config.lua  log.lua  milua.lua  utils.lua
extlibs/msgpack/: msgpack.lua
extlibs/random/: RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  RandomNumberGeneratorTypes.hpp  init.lua
extlibs/sqlite/: assert.lua  db.lua  defs.lua  helpers.lua  init.lua  json.lua  parser.lua  stmt.lua  strfun.lua  tbl.lua  utils.lua
extra/android/: app-data.patch  build_luv.sh  gradlew.patch  sqlite_all_abi.patch
extra/osx/: app-data.patch
extra/web/: build_fake_dlfcn.sh  fake_dlfcn.c  include_fake_dlfcn.patch  love.css  love_include_ffi.patch  lua.hpp  lua_include_cffi.patch  lua_intsize_fix.patch  mk_symtbl.sh  template.html
extra/windows/: launch.bat
game/: init.lua
game_handler/: assets.lua  data.lua  init.lua  input.lua  profile.lua  replay.lua
game_handler/video/: audio.lua  encode.c  fake_source.lua  init.lua  mixer.lua
input_schemes/: controller.lua  init.lua  keyboard.lua  mouse.lua  touch.lua
server/: database.lua  database_thread.lua  game.lua  game_thread.lua  init.lua  main.lua  migrate.lua  packet_handler.lua  version.lua  web_api.lua
test/: conf.lua  headless.lua  main.lua  replay.lua
ui/: animate.lua  background.lua  base.lua  disabled.lua  extmath.lua  image.lua  init.lua  key_repeat.lua  keyboard_navigation.lua  layout.lua  list.lua  point_in_polygon.lua  screen_list.lua  search.lua  stack.lua  theme.lua  title.lua  title2.lua  ui.lua
ui/anim/: ease.lua  signal.lua  transform.lua  transitions.lua
ui/element/: button.lua  edge.lua  image.lua  init.lua  text_box.lua  textbox.lua
ui/elements/: dropdown.lua  element.lua  entry.lua  hexagon.lua  icon.lua  input.lua  label.lua  progress.lua  (+4 more)
(+138 files in other folders)
